<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--login-->
    <string name="app_name">好享推</string>
    <string name="welcome">欢迎登录好享推</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="hint_number">请输入您的手机号</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">没有账号,立即注册</string>
    <string name="login">登录</string>
    <string name="auth_code">验证码</string>
    <string name="hint_auth_code">请输入您的短信验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="register_title">用户注册</string>
    <string name="know_and_read">注册好享推代表你已知晓并阅读</string>
    <string name="terms_service">《好享推服务条款》</string>

    <style name="btn_white_nomal_style">
        <item name="android:background">@drawable/selector_btn_white</item>
        <item name="android:height">45dp</item>
    </style>

    <string name="bind_terminal">1. 请检查您的终端设备电源是否开启；\n2. 请尝试重启终端设备后，重新搜索；\n3. 若多次尝试仍未搜索到，请尝试重启手机蓝牙；\n4. 如仍未搜索到，请联系服务商或在线客服</string>
    <string name="search">搜索</string>
    <string name="open_camera_permission">无法获取摄像头权限，请检查是否已经打开摄像头权限</string>

    <!--home-->
    <string name="ordinary">普通收款</string>
    <string name="superduty">超级收款</string>
    <string name="qr">二维码收款</string>
    <string name="we_chat">微信/支付宝</string>
    <string name="quick_pass">闪付优惠</string>
    <string name="slogan">好享推，您的支付好帮手</string>
    <string name="receipt">今日收款(元)</string>
    <string name="month_total">本月累计收款(元)</string>
    <string name="last_sale">最近交易</string>
    <string name="no_msg">暂无消息…</string>
    <string name="enter_amount">请输入金额</string>
    <string name="confirm_receipt">确定收款</string>
    <string name="credit_card">收款卡</string>
    <string name="card_payment">刷卡支付</string>
    <string name="line_item">订单详情</string>
    <string name="order_number">订单号</string>
    <string name="product_name">商品名称</string>
    <string name="payment_amount">付款金额</string>
    <string name="await">等待用户确认交易…</string>
    <string name="querying">自动查询中</string>
    <string name="immediately_query">立即查询</string>
    <string name="sign_name">请签名</string>
    <string name="close">关闭</string>
    <string name="rewrite">重写</string>
    <string name="sales_slip">签购单</string>
    <string name="cardholder_signs">持卡人签名</string>
    <string name="terminals_no">终端机号</string>
    <string name="merchant_name">商户名称</string>
    <string name="merchant_code">商户编号</string>
    <string name="acquiring_bank">收单行</string>
    <string name="expiry_date">有效期</string>
    <string name="card_brand">卡组织</string>
    <string name="issuing_bank">发卡行</string>
    <string name="card_type">卡类别</string>
    <string name="card_number">卡号</string>
    <string name="trade_type">交易类型</string>
    <string name="trade_date">交易日期</string>
    <string name="trace_no">查询号</string>
    <string name="money">金额</string>
    <string name="credit_card_succeed">刷卡成功</string>
    <string name="credit_card_failure">刷卡失败</string>
    <string name="unknown">未知结果</string>
    <string name="standing_business">继续交易</string>
    <string name="back_home">返回首页</string>
    <string name="payment_me">支付宝扫一扫，向我付款</string>
    <string name="trade_within">请讲二维码对准扫码框内进行交易</string>

    <!--transaction-->
    <string name="transaction_query">交易查询</string>
    <string name="screen">筛选</string>
    <string name="deals_done">交易成功</string>
    <string name="failure_deal">交易失败</string>
    <string name="unknown_transaction">未知交易</string>
    <string name="screening_condition">筛选条件</string>
    <string name="trading_status">交易状态</string>
    <string name="check_all">全选</string>
    <string name="succeed">成功</string>
    <string name="failure">失败</string>
    <string name="unknown_status">未知</string>
    <string name="card_pay_type">刷卡</string>
    <string name="ali_pay_type">支付宝</string>
    <string name="we_chat_type">微信</string>
    <string name="amount_interval">金额区间</string>
    <string name="date_interval">查询日期</string>
    <string name="option_date">选择日期</string>
    <string name="my_income">我的收益</string>
    <string name="more">更多</string>
</resources>