<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView-->
        <!--android:id="@+id/back_iv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/dimen_20"-->
        <!--android:layout_marginTop="@dimen/dimen_24"-->
        <!--android:src="@mipmap/back" />-->

    <RelativeLayout style="@style/topbar_bg"
        android:id="@+id/titlebar_mypos_info">

        <ImageButton
            android:onClick="onReturnClick"
            style="@style/topbar_return_img1" />

        <!--<ImageButton style="@style/topbar_return_img1" />-->

        <!--<TextView-->
            <!--style="@style/topbar_title"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="商户信息" />-->

    </RelativeLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="@dimen/dimen_164"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_72"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_28"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/content_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="@dimen/dimen_57"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_40"
        android:paddingRight="@dimen/dimen_50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regieter_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_17"
            android:background="@drawable/et_bg"
            android:hint="@string/hint_number"
            android:inputType="number"
            android:maxLines="@integer/int_1"
            android:textSize="@dimen/font_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28"
            android:text="@string/auth_code"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15">

            <EditText
                android:id="@+id/regieter_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/hint_auth_code"
                android:inputType="number"
                android:maxLines="@integer/int_1"
                android:textSize="@dimen/font_12" />

            <Button
                android:id="@+id/regieter_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:text="@string/get_auth_code"
                android:textColor="@color/text_color"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="@dimen/font_12" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15">

            <EditText
                android:id="@+id/regieter_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="@integer/int_1"
                android:textSize="@dimen/font_12" />

            <CheckBox
                android:id="@+id/regieter_show_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/show_password" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_3"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/regieter_agreement_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/check_box"
                android:text="@string/know_and_read"
                android:textColor="@color/et_line_color"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/regieter_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_service"
                android:textColor="@color/et_line_color"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/regieter_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_51"
        android:layout_below="@+id/content_ly"
        android:layout_marginHorizontal="@dimen/dimen_43"
        android:layout_marginTop="@dimen/dimen_72"
        android:background="@drawable/button_bg"
        android:text="@string/confirm"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_15" />


</RelativeLayout>